<?xml version="1.0"?>
<package format="2">
  <name>premaidai_moveit</name>
  <version>0.0.0</version>
  <description>The premaidai_moveit package</description>
  <maintainer email="chikuta@todo.todo">chikuta</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
